--- a/data/settings.json
+++ b/data/settings.json
@@ -40,7 +40,7 @@
 					"spacing":58
 				},
 				{
-					"spacing":14
+					"separator":2
 				},
 				{
 					"name":"Show Graph Overlay",
@@ -58,7 +58,7 @@
 					"note":"no idea",
 					"desc":"Places the Graph Overlay on a specific Position. Left to Right and top to bottom.",
 
-					"spacing":74
+					"spacing":88
 				},
 				{
 					"spacing":10
@@ -68,7 +68,7 @@
 					"path":"DeveloperExtras/Graph/Overlay/Transparency",
 					"desc":"Places the Graph Overlay on a specific Position. Left to Right and top to bottom.",
 
-					"spacing":32
+					"spacing":88
 				},
 				{
 					"spacing":10
@@ -77,7 +77,7 @@
 					"name":"Bar Transparency",
 					"path":"DeveloperExtras/Graph/Overlay/Transparency/Bar",
 
-					"spacing":32
+					"spacing":88
 				},
 				{
 					"spacing":10
@@ -86,7 +86,7 @@
 					"name":"Bar Background Transparency",
 					"path":"DeveloperExtras/Graph/Overlay/Transparency/Bar/Background",
 
-					"spacing":32
+					"spacing":88
 				},
 				{
 					"spacing":10
@@ -95,7 +95,7 @@
 					"name":"Text Transparency",
 					"path":"DeveloperExtras/Graph/Overlay/Transparency/Text",
 
-					"spacing":32
+					"spacing":88
 				},
 				{
 					"separator":5
